# gas-framework

./: CMakeLists.txt  Copyright.txt  Doxygen.config  Project.geany  ProjectHome.md  README  Readme.txt
Documentation/: Integrator.tex  adattivita.tex  geometria.tex
Documentation/Developer/: main.toc
Gas/: CMakeLists.txt  Gas.h
Gas/Common/: Array.hpp  CMakeLists.txt  Common.h  Exception.hpp  Iterable.hpp  Limits.hpp  List.hpp  Macro.hpp  Math.hpp  Meta.hpp  Program.hpp
Gas/Derivation/: Derivation.h
Gas/Element/: Element.h  P1.Triangle.hpp
Gas/Geometry/: Geometry.h  Triangle.hpp
Gas/Integration/: Integration.h  Integration1D.hpp  Integrator.hpp
Gas/LinearAlgebra/: CMakeLists.txt  LinearAlgebra.h  LinearAlgebra.hpp  Matrix.cpp  Matrix.hpp  Meta.hpp  Product.hpp  Solver.hpp  Vector.cpp  Vector.hpp  Vector2.hpp
Main/: CMakeLists.txt  main.cpp
Test/: CMakeLists.txt  Element.cpp
branches/gas-rewrite/gas/test/: CMakeLists.txt  empty.cpp
branches/gas-rewrite/gas/test/functional/base/: P1_tetra.cpp  P1_triangle.cpp
branches/gas-rewrite/gas/test/geometry/: unit.cpp
branches/gas-rewrite/gas/test/geometry/map/: affine_interval.cpp  affine_triangle.cpp
branches/gas-rewrite/gas/test/numerical/quadrature/: gauss_legendre.cpp  newton_cotes.cpp
branches/img_seg/: CMakeLists.txt  README
branches/img_seg/cmake/: FindCGAL.cmake  FindDoxygen.cmake  FindEigen2.cmake
branches/img_seg/examples/image_segmentation/: histogram.h  main.cpp  posterior.h  printer.h  triangulation.h
branches/img_seg/source/: chrono.h  static.h
branches/img_seg/source/functional/: function.h
branches/img_seg/source/geometry/unit/: tetra.h
branches/img_seg/source/numerical/quadrature/: formula.h
branches/img_seg/test/: CMakeLists.txt
cmake/: FindCGAL.cmake  Findlibconfig.cmake
doc/: CMakeLists.txt  Doxyfile.in
examples/: CMakeLists.txt
gas/: CMakeLists.txt  gas.doxyfile
gas/cmake/: FindCGAL.cmake  FindEigen.cmake
gas/examples/: CMakeLists.txt  empty.cpp
gas/examples/poisson/: CMakeLists.txt  main.cpp  poisson.h  posterior.h  printer.h  problem.h  triangulation.h
gas/source/: assertion.h  css.h  gas  gas.h  macro.h  static.h  svg.h
gas/source/functional/: derivative.h  element.h  function.h
gas/source/functional/base/: P1.h  P1_interval.h  P1_tetra.h  P1_triangle.h  base
gas/source/gas/: assertion.h  chrono.h  macro.h  test.h  type.h
gas/source/geometry/map/: affine.h  affine_interval.h  affine_tetra.h  affine_triangle.h  map
gas/source/geometry/unit/: hexa.h  interval.h  square.h  tetra.h  triangle.h  unit
gas/source/numerical/quadrature/: formula.h  gauss_legendre.h  method.h  newton_cotes.h
gas/source/numerical/tiny/: det.h  dot.h  matrix.h  mul.h  tiny  vector.h
gas/test/: CMakeLists.txt  empty.cpp
gas/test/functional/base/: P1_interval.cpp  P1_tetra.cpp  P1_triangle.cpp
gas/test/geometry/: unit.cpp
gas/test/geometry/map/: affine_interval.cpp  affine_tetra.cpp  affine_triangle.cpp
gas/test/numerical/quadrature/: gauss_legendre.cpp  newton_cotes.cpp
source/: gas
trunk/: CMakeLists.txt  Doxygen.config  Project.geany  Readme.txt
trunk/Documentation/: galerkin_fem.tex
trunk/Documentation/Developer/: main.aux  main.tex
trunk/Gas/: CMakeLists.txt  Gas.h
trunk/Gas/Common/: Array.hpp  CMakeLists.txt  Common.h  Exception.cpp  Iterable.cpp  Iterable.hpp  Limits.hpp  Math.hpp  Meta.Function.hpp  Meta.Math.hpp  Meta.hpp  Program.cpp
trunk/Gas/Geometry/: Geometry.h  Interval.hpp  Triangle.hpp
trunk/Gas/Integration/: Integration.h  Integration1D.hpp  Integrator.hpp  coord_pesi.txt  gauss.html
trunk/Gas/Integration/geometry/: Triangle.hpp
trunk/Gas/Integration/method/: Gauss.hpp  NewtonCotes_2.hpp  method_2.hpp
trunk/Gas/LinearAlgebra/: CMakeLists.txt  Interface.hpp  LinearAlgebra.h  Matrix.cpp  Matrix.hpp  Meta.cpp  Product.hpp  Solver.cpp  Solver.hpp  SparseMatrix.cpp  SparseMatrix.hpp  Vector.Meta.hpp  Vector.cpp  Vector.hpp  Vector2.hpp
trunk/Gas/LinearAlgebra/solver/: cholesky.hpp  diagonal.hpp  lower1.hpp  solver.hpp
trunk/Gas/Poisson/: Info.hpp  Poisson.hpp
trunk/Gas/SparseLib++/: CMakeLists.txt
trunk/Gas/SparseLib++/mv/: CMakeLists.txt
trunk/Gas/SparseLib++/spblas/: CMakeLists.txt
trunk/Main/: main.cpp
trunk/Test/: CMakeLists.txt  Integrator.cpp  Norm.cpp  Triangle.cpp
trunk/Test/LinearAlgebra/: Vector.cpp  VectorTest.cpp
trunk/cmake/: FindDoxygen.cmake  FindEigen.cmake
trunk/examples/poisson/: main.cpp  poisson.h  posterior.h  triangulation.h
trunk/gas/source/: css.h
trunk/gas/source/geometry/map/: affine.h  affine_triangle.h
trunk/gas/source/geometry/unit/: square.h
trunk/gas/source/numerical/quadrature/: gauss_legendre.h  quadrature
trunk/gas/test/functional/base/: P1_tetra.cpp
trunk/gas/test/geometry/map/: affine_tetra.cpp  affine_triangle.cpp
trunk/source/: assertion.h  gas
trunk/source/functional/: derivative.h  function.h
trunk/source/functional/base/: P1.h  P1_interval.h  P1_tetra.h  P1_triangle.h
trunk/source/geometry/unit/: interval.h
wiki/: Compilazione.wiki  Documentazione_Geometrie_Integratori.wiki  ProgrammaVenerdi24.wiki  TemplateUsage.wiki
(+79 files in other folders)
