PROJECT(GAS C CXX)
CMAKE_MINIMUM_REQUIRED(VERSION 2.4 FATAL_ERROR)
ENABLE_TESTING()

SET(CMAKE_MODULE_PATH "${GAS_SOURCE_DIR}/cmake")
INCLUDE(FindCGAL)
INCLUDE(FindEigen)
INCLUDE(FindOpenMP)

# OpenMP
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")

INCLUDE_DIRECTORIES(${GAS_SOURCE_DIR}/source)

ADD_SUBDIRECTORY(examples)
ADD_SUBDIRECTORY(test)
